apply plugin: 'java'

sourceCompatibility = 1.8

version = rootProject.file('VERSION').text.trim()

jar {
  manifest {
    attributes 'Implementation-Title': "DRYlib for Java",
               'Implementation-Version': version
  }
}

repositories {
  mavenCentral()
}

dependencies {
  compile 'com.intellij:annotations:+@jar'
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
  testCompile 'org.assertj:assertj-core:3.9.1'
}

tasks.withType(JavaCompile).all {
  options.compilerArgs.add('-Xlint:all')
}

test {
  useJUnitPlatform()
}
